# ocloc

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup_Nov8_2021.txt
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: API.md  API.rst  about.md  conf.py  index.rst  installation.md  installation.rst  requirements-dev.txt  rst_commands_david.rst  tutorial.md
docs/manual/: data_requirements.rst  index.rst  tutorial.rst
docs/tutorial/: 1loading_data.nblink  2checking_the_data_we_loaded.nblink  3calculate_apriori_dt.nblink  4calculate_t_app.nblink  5selecting_correlations.nblink  6thursdaytalk.nblink  data_requirements.rst  getting_started.rst  introduction.rst  tutorial.rst
ocloc/: ocloc.py
src/ocloc/: __init__.py  _ocloc.py  bootstrap_module.py  jackknife_tools.py  modifying_apriori.py  ocloc.py  ocloc_test.py  skew_values.csv
tests/: test_bootstrap_module.py  test_ocloc.py
tests/data/: KEF_O01_1413547247_100.sac  KEF_O01_1417871231_100.sac  KEF_O01_1422187688_100.sac
tutorials/: 0. Preface.ipynb  1. Loading data to ocloc.ipynb  10. Testing only land stations.ipynb  2. Checking the data we loaded.ipynb  2. Data filtering.ipynb  2.Weighted_least_squares.ipynb  3. Calculate apriori_dt.ipynb  3. Weighted_least_squares.ipynb  4. Calculate t_app.ipynb  5. Data filtering.ipynb  5. Selecting eligible lapse crosscorrelations.ipynb  5. Weighted_least_squares.ipynb  6. Data filtering.ipynb  6. Refined inversion-Copy1.ipynb  6. Refined inversion-Copy2.ipynb  6. a Bootstrap - Comparing inverse strategies.ipynb  6. b Bootstrap - selecting optimal thresholds.ipynb  6. d Jackknife uncertainty analysis - selection of optimum thresholds.ipynb  7. Testing the inverse strategies.ipynb  7. Uncertainty analysis.ipynb  7.b uncertainty analysis and standard deviation.ipynb  9. Thursday talk tutorial.ipynb  Untitled.ipynb  __Testing the inverse strategies.ipynb  bootstrap_confidence_intervals.py  bootstrapping.ipynb  calculating clock drift objects with different thresholds.ipynb  comparing_with_skew.py  fortran_routine.ipynb  jacknife_snr_trh20dist_trh2.5all_a_vals.csv  jacknife_snr_trh20dist_trh2.5all_b_vals.csv  jacknife_snr_trh30dist_trh2.5all_a_vals.csv  jacknife_snr_trh30dist_trh2.5all_b_vals.csv  plotting the bootstrap.ipynb  rebuttal.ipynb  rebuttal_different_params.ipynb  skew_values_FDSN.csv  skew_values_corrected.csv  station_inf_few  station_info  (+4 more)
tutorials/bootstrap/: refinedInversion_bootstrap.pkl
tutorials/correlations_O20/: ARN_O20_1418651674_082.sac  ARN_O20_1422190032_100.sac  ARN_O20_1426508923_100.sac  ARN_O20_1430698105_094.sac  BER_O20_1426509516_100.sac  BER_O20_1430678374_092.sac  EIN_O20_1413530093_099.sac  EIN_O20_1417848019_098.sac  EIN_O20_1422225753_098.sac  EIN_O20_1426509406_100.sac  EIN_O20_1430680422_092.sac  (+197 more)
virtual_env/: pyvenv.cfg
(+51 files in other folders)
