[tool.poetry]
name = "ocloc"
version = "0.1.0"
description = ""
authors = ["David Naranjo <davidn182@hotmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
obspy = "^1.4.0"
pandas = "^2.0.0"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^6.0.0"
mypy = "^1.2.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
