[metadata]
name = OCloC
version = 1.0
description = OCloC - Python Package for OBS Clock Corrections.
license = Apache-2.0
author = David Naranjo
author_email = d.f.naranjohernandez@tudelft.nl


[project.urls]
homepage = "https://github.com/davidn182/ocloc"
documentation = "https://github.com/davidn182/ocloc"

[options]
install_requires =
    pandas
    obspy>=1.0.3
    matplotlib>=1.3.0
    seaborn
    sphinx_bootstrap_theme

