[metadata]
name = oclocki
version = 1.1
description = OCloC - Python Package for OBS Clock Corrections.
license = Apache-2.0
author = David Naranjo
author_email = d.f.naranjohernandez@tudelft.nl
url = https://github.com/davidn182/ocloc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X

[project.urls]
homepage = "https://github.com/davidn182/ocloc"

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
